// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpert App Tests should match to snapshot 1`] = `
<Fragment>
  <h2>
    Arthur's Gif App
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`GifExpert App Tests should mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Arthur's Gif App
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon"
      key="Dragon"
    />
    <GifGrid
      category="WandaVision"
      key="WandaVision"
    />
  </ol>
</Fragment>
`;
